Temporary fix to next page animation on mobile

--- a/src/styles/pages/CaseStudy.scss
+++ b/src/styles/pages/CaseStudy.scss
@@ -219,17 +219,29 @@
 .next-case {
   position: relative;
   height: 125vh;
-  @include media("<=800px") {
-    height: 50vh;
-  }
-  @include media("<=phone") {
-    height: 40vh;
-  }
   width: 100%;
   overflow: hidden;
   a {
     color: black;
     text-decoration: none;
+  }
+  .wave {
+    position: absolute;
+    top: 40%;
+    fill: rgb(191, 235, 255);
+    cursor: pointer;
+    transition: opacity 0.3s ease-in-out;
+    opacity: 0.6;
+    &:nth-of-type(2) {
+      fill: rgb(123, 213, 255);
+      opacity: 1;
+    }
+    @include media("<=800px") {
+      top: 74%;
+    }
+    @include media("<=phone") {
+      top: 80%;
+    }
   }
   .scrolling-text {
     position: absolute;
@@ -240,6 +252,12 @@
     height: clamp(3rem, 10.2vw, 16rem);
     text-align: center;
     overflow: hidden;
+    @include media("<=800px") {
+      top: 75%;
+    }
+    @include media("<=phone") {
+      top: 80%;
+    }
     h2 {
       position: relative;
       top: 0px;
@@ -254,18 +272,6 @@
       @include media("<=phone") {
         letter-spacing: -0.2rem;
       }
-    }
-  }
-  .wave {
-    position: absolute;
-    top: 40%;
-    fill: rgb(191, 235, 255);
-    cursor: pointer;
-    transition: opacity 0.3s ease-in-out;
-    opacity: 0.6;
-    &:nth-of-type(2) {
-      fill: rgb(123, 213, 255);
-      opacity: 1;
     }
   }
   .scroll-indicator {
@@ -284,8 +290,11 @@
     color: $black;
     z-index: 6;
     letter-spacing: -0.1rem;
+    @include media("<=800px") {
+      top: 75%;
+    }
     @include media("<=phone") {
-      top: 25%;
+      top: 75%;
     }
     p {
       font-size: clamp(1.1rem, 4vw, 1.7rem);
@@ -329,3 +338,119 @@
     }
   }
 }
+
+//! this css requires a new next page animation
+//todo: create a second animation that runs at certain screen sizes
+// .next-case {
+//   position: relative;
+//   height: 125vh;
+//   @include media("<=800px") {
+//     height: 50vh;
+//   }
+//   @include media("<=phone") {
+//     height: 40vh;
+//   }
+//   width: 100%;
+//   overflow: hidden;
+//   a {
+//     color: black;
+//     text-decoration: none;
+//   }
+//   .scrolling-text {
+//     position: absolute;
+//     top: 43%;
+//     left: 50%;
+//     transform: translate(-50%, 0);
+//     padding: 0 1rem;
+//     height: clamp(3rem, 10.2vw, 16rem);
+//     text-align: center;
+//     overflow: hidden;
+//     h2 {
+//       position: relative;
+//       top: 0px;
+//       margin: 0rem;
+//       font-weight: 500;
+//       letter-spacing: -1.5rem;
+//       transition: top 0.5s;
+//       font-size: clamp(2rem, 10vw, 14rem);
+//       @include media("<=800px") {
+//         letter-spacing: -0.5rem;
+//       }
+//       @include media("<=phone") {
+//         letter-spacing: -0.2rem;
+//       }
+//     }
+//   }
+//   .wave {
+//     position: absolute;
+//     top: 40%;
+//     fill: rgb(191, 235, 255);
+//     cursor: pointer;
+//     transition: opacity 0.3s ease-in-out;
+//     opacity: 0.6;
+//     &:nth-of-type(2) {
+//       fill: rgb(123, 213, 255);
+//       opacity: 1;
+//     }
+//   }
+//   .scroll-indicator {
+//     position: absolute;
+//     top: 55%;
+//     left: 50%;
+//     width: 100%;
+//     transform: translate(-50%, -50%);
+//     margin: 10rem 0rem;
+//     padding: 20px 0;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     box-sizing: border-box;
+//     pointer-events: none;
+//     color: $black;
+//     z-index: 6;
+//     letter-spacing: -0.1rem;
+//     @include media("<=phone") {
+//       top: 25%;
+//     }
+//     p {
+//       font-size: clamp(1.1rem, 4vw, 1.7rem);
+//       margin: 0;
+//       margin-right: clamp(1rem, 4vw, 1.2rem);
+//     }
+//     .scroll-arrow {
+//       height: clamp(35px, 4vw, 60px);
+//       width: clamp(35px, 4vw, 60px);
+//       border: 2px solid black;
+//       border-radius: 100%;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       cursor: pointer;
+//       pointer-events: none;
+//       transition: background 0.4s ease-in-out, color 0.4s ease-in-out;
+//       svg {
+//         color: $black;
+//         height: clamp(25px, 2vw, 35px);
+//         width: clamp(25px, 2vw, 35px);
+//         transform: rotate(90deg);
+//       }
+//     }
+//   }
+
+//   .next-page-landing-image {
+//     position: relative;
+//     top: 100%;
+//     height: 100vh;
+//     width: 100%;
+//     overflow: hidden;
+//     background: black;
+//     img {
+//       position: absolute;
+//       height: 100%;
+//       width: 100%;
+//       object-fit: cover;
+//       opacity: 0.65;
+//       pointer-events: none;
+//     }
+//   }
+// }
